--- a/2022/day13/day13.ipynb
+++ b/2022/day13/day13.ipynb
@@ -16,22 +16,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[9, 4, [[6, 8], 7], [], 9]], [[[3, 7, 6]], [[9, [], [2, 2, 4, 0, 6], [0, 2]], 2, [[10], 6, [], 5], 2], [[[5, 3, 5, 4, 10], 10, [10]], 3, 5, [[7, 2, 4, 1], 6, 6, 5, [8, 1, 5]]]], [[[3, 2, [8, 10, 1, 2, 1]], 6, [[10, 1], [], [6, 1, 1, 0, 7], []], [8, 7, [7, 10, 4], 10], [[7, 0]]]], [[[10]], []], [[[5, 2, 0, [10, 6, 10], 9], [], [1, 2, 8, [], 8], [[6, 4], 0, 2, [1, 10]], [[], [10, 1]]], [10, [3], 10, [[5, 4, 8, 5, 10], [0], 7, 7]], [[[1, 2], [0], 3, [], [1, 1, 6, 2, 2]], 10, []]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "with open('dayx.txt', 'r') as f:\n",
+    "with open('day13.txt', 'r') as f:\n",
     "    lines = [x.replace('\\n', '') for x in f.readlines()]\n",
-    "\n",
+    "lines = [eval(x) for x in lines if len(x) > 0 ]\n",
     "print(lines[:5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5555"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def check_type(value):\n",
+    "    if isinstance(value, list):\n",
+    "        return 'list'\n",
+    "    elif isinstance(value, int):\n",
+    "        return 'integer'\n",
+    "\n",
+    "def compare(left, right, outcome):\n",
+    "    for i in range(max(len(left), len(right))):\n",
+    "        if i >= len(left):\n",
+    "            # print('Left side ran out of items, so inputs are in the right order')\n",
+    "            return True\n",
+    "        elif i >= len(right):\n",
+    "            # print('Right side ran out of items, so inputs are not in the right order')\n",
+    "            return False\n",
+    "\n",
+    "        if check_type(left[i]) == 'integer' and check_type(right[i]) == 'integer':\n",
+    "            if left[i] < right[i]:\n",
+    "                # print('Left side is smaller, so inputs are in the right order')\n",
+    "                return True\n",
+    "            elif right[i] < left[i]:\n",
+    "                # print('Right side is smaller, so inputs are not in the right order')\n",
+    "                return False\n",
+    "        elif check_type(left[i]) == 'list' and check_type(right[i]) == 'list':\n",
+    "            outcome = compare(left[i], right[i], outcome)\n",
+    "        \n",
+    "        else:\n",
+    "            if check_type(left[i]) == 'list':\n",
+    "                outcome = compare(left[i], [right[i]], outcome)\n",
+    "            else:\n",
+    "                outcome = compare([left[i]], right[i], outcome)\n",
+    "        if not outcome is None:\n",
+    "            return outcome\n",
+    "\n",
+    "    return outcome\n",
+    "\n",
+    "in_order_indices = list()\n",
+    "for i in range(0, len(lines), 2):\n",
+    "    \n",
+    "    left = lines[i]\n",
+    "    right = lines[i+1]\n",
+    "    if compare(left, right, None):\n",
+    "        in_order_indices.append(int((i/2)+1))\n",
+    "sum(in_order_indices)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -42,10 +105,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Right\n",
+      "Left\n",
+      "Right\n",
+      "Left\n",
+      "Left\n",
+      "Left\n",
+      "Right\n",
+      "Left\n",
+      "Right\n",
+      "Right\n",
+      "Left\n",
+      "Left\n",
+      "Right\n",
+      "Right\n",
+      "Left\n",
+      "Right\n",
+      "Left\n",
+      "Left\n",
+      "Left\n",
+      "Left\n",
+      "Right\n",
+      "Left\n",
+      "Left\n",
+      "Left\n",
+      "Right\n",
+      "Left\n",
+      "Right\n",
+      "Right\n",
+      "Left\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Left\n",
+      "Left\n",
+      "Left\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Left\n",
+      "Left\n",
+      "Left\n",
+      "Left\n",
+      "Right\n",
+      "Left\n",
+      "Right\n",
+      "Right\n",
+      "Left\n",
+      "Left\n",
+      "Left\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Left\n",
+      "Left\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Left\n",
+      "Right\n",
+      "Right\n",
+      "Left\n",
+      "Right\n",
+      "Left\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Left\n",
+      "Right\n",
+      "Right\n",
+      "Left\n",
+      "Right\n",
+      "Left\n",
+      "Left\n",
+      "Left\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Left\n",
+      "Left\n",
+      "Left\n",
+      "Right\n",
+      "Left\n",
+      "Right\n",
+      "Left\n",
+      "Left\n",
+      "Right\n",
+      "Left\n",
+      "Left\n",
+      "Right\n",
+      "Left\n",
+      "Left\n",
+      "Left\n",
+      "Left\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Left\n",
+      "Right\n",
+      "Left\n",
+      "Left\n",
+      "Left\n",
+      "Left\n",
+      "Left\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Left\n",
+      "Left\n",
+      "Right\n",
+      "Left\n",
+      "Right\n",
+      "Left\n",
+      "Right\n",
+      "Left\n",
+      "Left\n",
+      "Right\n",
+      "Left\n",
+      "Right\n",
+      "Right\n",
+      "Left\n",
+      "Left\n",
+      "Left\n",
+      "Left\n",
+      "Left\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Left\n",
+      "Left\n",
+      "Right\n",
+      "Right\n",
+      "Right\n",
+      "Left\n",
+      "Right\n",
+      "Right\n",
+      "Left\n",
+      "Left\n",
+      "Left\n",
+      "Right\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def check_type(value):\n",
+    "    if isinstance(value, list):\n",
+    "        return 'list'\n",
+    "    elif isinstance(value, int):\n",
+    "        return 'integer'\n",
+    "\n",
+    "def compare(left, right, outcome):\n",
+    "    for i in range(max(len(left), len(right))):\n",
+    "        if i >= len(left):\n",
+    "            # print('Left side ran out of items, so inputs are in the right order')\n",
+    "            return 'Left'\n",
+    "        elif i >= len(right):\n",
+    "            # print('Right side ran out of items, so inputs are not in the right order')\n",
+    "            return 'Right'\n",
+    "\n",
+    "        if check_type(left[i]) == 'integer' and check_type(right[i]) == 'integer':\n",
+    "            if left[i] < right[i]:\n",
+    "                # print('Left side is smaller, so inputs are in the right order')\n",
+    "                return 'Left'\n",
+    "            elif right[i] < left[i]:\n",
+    "                # print('Right side is smaller, so inputs are not in the right order')\n",
+    "                return 'Right'\n",
+    "        elif check_type(left[i]) == 'list' and check_type(right[i]) == 'list':\n",
+    "            outcome = compare(left[i], right[i], outcome)\n",
+    "        \n",
+    "        else:\n",
+    "            if check_type(left[i]) == 'list':\n",
+    "                outcome = compare(left[i], [right[i]], outcome)\n",
+    "            else:\n",
+    "                outcome = compare([left[i]], right[i], outcome)\n",
+    "        if not outcome is None:\n",
+    "            return outcome\n",
+    "\n",
+    "    return outcome\n",
+    "\n",
+    "in_order_indices = list()\n",
+    "for i in range(0, len(lines), 2):\n",
+    "    \n",
+    "    left = lines[i]\n",
+    "    right = lines[i+1]\n",
+    "    first_side = compare(left, right, None)\n",
+    "    print(first_side)\n",
+    "sum(in_order_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22852\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sort_list(values):\n",
+    "    # Base case: the list is already sorted\n",
+    "    if len(values) <= 1:\n",
+    "        return values\n",
+    "\n",
+    "    # Split the list into two halves\n",
+    "    mid = len(values) // 2\n",
+    "    left = values[:mid]\n",
+    "    right = values[mid:]\n",
+    "\n",
+    "    # Recursively sort the two halves\n",
+    "    left = sort_list(left)\n",
+    "    right = sort_list(right)\n",
+    "\n",
+    "    # Merge the sorted halves\n",
+    "    sorted_list = []\n",
+    "    while left and right:\n",
+    "        # Compare the first elements of the two lists\n",
+    "        if compare(left[0], right[0], None) == 'Left':\n",
+    "            # The left element is smaller, so add it to the sorted list\n",
+    "            sorted_list.append(left.pop(0))\n",
+    "        else:\n",
+    "            # The right element is smaller, so add it to the sorted list\n",
+    "            sorted_list.append(right.pop(0))\n",
+    "\n",
+    "    # Add any remaining elements to the sorted list\n",
+    "    sorted_list.extend(left)\n",
+    "    sorted_list.extend(right)\n",
+    "\n",
+    "    return sorted_list\n",
+    "divider_packets = [[[2]], [[6]]]\n",
+    "sorted = sort_list(lines + divider_packets)\n",
+    "\n",
+    "print((sorted.index(divider_packets[0]) + 1) * (sorted.index(divider_packets[1]) + 1))"
+   ]
   }
  ],
  "metadata": {
